Fixing header x overflow

--- a/src/Components/Header/Full/Header.module.css
+++ b/src/Components/Header/Full/Header.module.css
@@ -1,6 +1,7 @@
 /*! CSS Styling for the header element */
 /*! Header element at /src/Components/Header/Full/Header.jsx */
 .container{
+    box-sizing: border-box;
     width: 100%;
     position: sticky;
     top: 0;
